--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-<h1>Hello, GitHub Pages!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="WDD 131 – Dynamic Web Fundamentals. Tyler Andrew. Home page with personal and course links." />
+  <meta name="author" content="Tyler Andrew" />
+  <title>WDD 131 – Dynamic Web Fundamentals - Tyler Andrew</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles/base.css" />
+  <script src="scripts/getdates.js" defer></script>
+</head>
+<body>
+  <header>
+    <h1>WDD 131 – Dynamic Web Fundamentals</h1>
+    <nav>
+      <a href="https://linkedin.com">LinkedIn</a>
+      <a href="https://byupw.instructure.com/">Canvas</a>
+      <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Favorite Scripture</a>
+      <a href="#">Final Project</a>
+    </nav>
+  </header>
+
+  <main>
+  <section class="card">
+    <h2>About Me</h2>
+    <img src="images/cardimage.jpg.jpg" alt="A picture of me" class="card-image" />
+    <p>Hi! I’m Tyler Andrew from St. George, UT. I love the outdoors and building meaningful web experiences.</p>
+  </section>
+</main>
+
+
+    <section class="card">
+      <h2>Course Goals</h2>
+      <img src="images/stockphoto22.jpg" alt="Course goals image" />
+      <p>My goals for WDD 131 are to master responsive design, JavaScript basics, and build a functional final project site.</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; <span id="currentyear"></span> Tyler Andrew | St. George, UT</p>
+    <p id="lastModified"></p>
+  </footer>
+</body>
+</html>
